--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  background-color: hsla(220, 18%, 20%, 1);
+  color: hsla(0, 0%, 85%, 1);
   margin: 0;
   padding: 0;
   font-family: sans-serif;
