--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,138 @@
+* {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.1em;
+}
+
+body {
+  background-color: hsla(218, 25%, 13%, 1);
+  color: hsla(201, 52%, 89%, 1);
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+
 .App {
   height: 100vh;
   width: 100vw;
   text-align: center;
+  background: radial-gradient(50% 100%, hsla(218, 25%, 13%, 0.7) 49%, hsla(218, 25%, 16%, 0.85) 100%), url('img/graph-background.png') no-repeat fixed center;
+  background-size: contain;
+}
+
+.dot {
+  width: 4px;
+  height: 4px;
+  border-radius: 2px;
+  position: absolute;
+  background-color: white;
+}
+
+.layout {
+  height: 100vh;
+  width: 100vw;
+}
+
+.layout > * {
+  display: block;
+  margin: 0 auto;
+  height: calc(100vh - 15em);
+}
+
+.languageSelector {
+  width: 50%;
+  float: left;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.languageSelection {
+  display: block;
+  padding: 2em;
+  width: 10em;
+  padding-right: 5em;
+  text-align: left;
+  cursor: default;
+  line-height: 2em;
+}
+
+.languageSelection > img {
+  float: left;
+  display: inline-block;
+  padding-right: 1em;
+  max-height: 2em;
+  max-width: 2em;
+}
+
+.languageDisplay {
+  display: inline-block;
+  width: 50%;
+  float: left;
+}
+
+.languageDisplay svg {
+  padding: 0.1em;
+  width: calc(100% - 5em);
+  height: 100%;
+  float: left;
+  display: inline-block;
+}
+
+.languageDisplay line:not(.hidden) {
+  stroke: hsla(201, 52%, 89%, 1);
+  stroke-width: 0.2em;
+}
+
+.languageDisplay line[data-selected=true] {
+  stroke: #EA9600;
+}
+
+.languageDisplay line.hidden {
+  opacity: 1;
+  stroke: transparent;
+}
+
+.languageDisplay line.impact {
+  opacity: 0.25;
+}
+
+.talentDescription {
+  display: block;
+  width: 100%;
+  height: 7.5em;
+}
+
+.talentDescription > span {
+  color: hsla(201, 52%, 89%, 1);
+  font-weight: 400;
+  font-size: 1.3em;
+  line-height: 3em;
+  text-transform: lowercase;
+  vertical-align: middle;
+}
+
+.talentDescription > span.highlight {
+  font-weight: 600;
+  font-size: 2.4em;
+  line-height: 3em;
+  text-transform: uppercase;
+  color: #EA9600;
+  padding-left: 0.2em;
+  padding-right: 0.2em; 
+  vertical-align: middle;
+}
+
+.talentDescription > .small.highlight {
+  font-size: 1.6em;
+}
+
+.languageSelection {
+  transition: 300ms opacity;
+  opacity: 0.25;
+}
+
+.languageSelection[data-selected=true], .languageSelection:hover {
+  opacity: 1.0;
 }
