--- a/src/css/main.css
+++ b/src/css/main.css
@@ -16,7 +16,7 @@ body {
   height: 100vh;
   width: 100vw;
   text-align: center;
-  background: radial-gradient(50% 100%, hsla(218, 25%, 13%, 0.7) 49%, hsla(218, 25%, 16%, 0.85) 100%), url('img/graph-background.png') no-repeat fixed center;
+  background: radial-gradient(50% 100%, hsla(218, 25%, 13%, 0.7) 49%, hsla(218, 25%, 16%, 0.85) 100%), url('../img/graph-background.png') no-repeat fixed center;
   background-size: contain;
 }
 
