--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,10 +18,36 @@ body {
   background-color: hsla(220, 18%, 10%, 1);
 }
 
+.scanButton {
+  display: block;
+  position: absolute;
+  bottom: 1em;
+  cursor: default;
+  text-align: center;
+  text-transform: uppercase;
+  opacity: 0.8;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+
+.scanButton:hover {
+  opacity: 1.0;
+}
+
+.scanButton > * {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  clear: both;
+  font-size: 0.9em;
+}
+
 .accountDisplay {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 1.5em; 
+  right: 1.5em;
   cursor: default;
 }
 
