--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,103 +1,64 @@
 * {
   font-family: 'Lato', sans-serif;
-  font-weight: 600;
+  font-weight: 300;
   letter-spacing: 0.1em;
 }
 
 body {
   height: 100vh;
   width: 100vw;
-  color: hsla(150, 6%, 93%, 1);
+  color: hsla(195, 29%, 95%, 1);
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  /* background: linear-gradient(-180deg, hsla(203, 92%, 10%, 0.91) 0%, hsla(222, 100%, 2%, 0.95) 100%), url('../img/building-background.jpeg') no-repeat fixed center; */
-  /* background: linear-gradient(-180deg, hsla(203, 40%, 15%, 1) 0%, hsla(203, 50%, 8%, 1) 100%); */
-  background-size: auto 80%;
   background-color: hsla(191, 21%, 10%, 1)
 }
 
-.scanButton {
-  display: block;
-  position: absolute;
-  bottom: 1em;
-  right: 1em;
-  width: 16em;
-  cursor: pointer;
-  text-align: center;
-  background-color: hsla(150, 6%, 93%, 1);
-  padding: 0.5em;
-  border-radius: 0.2em;
-  color: hsla(191, 21%, 10%, 1);
-  font-weight: 300;
+.App {
+  box-sizing: border-box;
+  padding: 1em;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
 }
 
-.scanButton:hover {
-  background-color: hsla(150, 6%, 97%, 1);
+.App > * {
+  flex-wrap: nowrap;
+  flex-grow: 1;
+  position: relative;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: space-between;
 }
 
-.scanButton span:first-child {
-  font-size: 0.8em;
+.infoPanel {
+  padding: 1em;
 }
 
-.scanButton span:last-child {
-  font-size: 0.5em;
-  opacity: 0.3;
+.accountDisplay { padding-top: 1rem; padding-bottom: 2rem; }
+.accountDisplay > * { display: block; padding-top: 0.1em; padding-bottom: 0.1em; }
+.accountDisplay > .description { font-size: 0.7em; color: hsla(208, 11%, 28%, 1); }
+.accountDisplay > .username:hover { cursor: pointer; }
+.accountDisplay > .logout { text-transform: lowercase; font-size: 0.9em; color: hsla(208, 11%, 28%, 1); }
+.accountDisplay > .logout:hover { cursor: pointer; color: hsla(200, 2%, 55%, 1); }
+
+.languageSelector {
+  padding-top: 1em;
+  padding-bottom: 1em;
+  flex-grow: 2;
 }
 
-.scanButton:hover {
-  opacity: 1.0;
-}
+.languageSelector > .languageSelection { padding-bottom: 1.5em; font-size: 1.0em; color: hsla(200, 3%, 35%, 1); }
+.languageSelector > .languageSelection:last-child { padding-bottom: 0; }
+.languageSelector > .languageSelection:hover { cursor: pointer; color: hsla(195, 29%, 95%, 1); }
+.languageSelector > .languageSelection[data-selected=true] { color: hsla(44, 98%, 60%, 1); }
 
-.scanButton > * {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  clear: both;
-  font-size: 0.9em;
-}
-
-.accountDisplay {
-  position: absolute;
-  top: 1em;
-  right: 1em;
-  cursor: default;
-}
-
-.accountDisplay > * {
-  display: block;
-  text-align: center;
-}
-
-.accountDisplay > .username {
-  font-weight: 300;
-  font-size: 1em;
-  line-height: 1.8em;
-}
-
-.accountDisplay > .logout {
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 0.6em;
-  color: hsla(0, 70%, 60%, 1);
-  cursor: pointer;
-}
-
-.accountDisplay > .logout:hover {
-  color: hsla(0, 70%, 70%, 1);
-}
-
-.accountDisplay > .logout:active {
-  color: hsla(0, 70%, 50%, 1);
-}
-
-.loadingBox {
-  position: absolute;
-  display: inline-block;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+.notification { padding-left: 1rem; padding-top: 1rem; padding-bottom: 1rem; overflow: hidden; cursor: pointer; transform: translateX(-1rem); }
+.notification:hover { transition: 500ms background-color; background-color: hsla(208, 11%, 20%, 1); border-radius: 0.25rem; }
+.notification span { font-size: 0.7rem; line-height: 0.8rem; float: left; display: inline-block; padding-top: 0.1rem; padding-left: 0.5rem; max-width: 16rem; height: 1.6rem; }
+.notification .fire { fill: hsla(44, 98%, 60%, 1); height: 1.6rem; float: left; display: inline-block; }
 
 .loadingBox > * {
   display: block;
@@ -119,6 +80,7 @@ body {
 
 .loginBox {
   position: absolute;
+  display: inline-block;
   margin: 0 auto;
   padding: 3em 5em;
   top: 40%;
@@ -133,16 +95,8 @@ body {
   font-size: 0.8em;
   text-transform: uppercase;
 }
-
-.loginBox > div {
-  font-weight: 400;
-  line-height: 1.6em;
-}
-
-.loginBox > div:nth-child(2) {
-  opacity: 0.4;
-}
-
+.loginBox > div { font-weight: 400; line-height: 1.6em; }
+.loginBox > div:nth-child(2) { opacity: 0.4; }
 .loginBox > a {
   display: block;
   position: relative;
@@ -157,158 +111,38 @@ body {
   text-transform: uppercase;
   outline: none;
 }
-
-.loginBox > a:hover {
-  background-color: hsla(218, 17%, 38%, 1);
-}
-
-.loginBox > a:active {
-  background-color: hsla(218, 17%, 18%, 1);
-}
+.loginBox > a:hover { background-color: hsla(218, 17%, 38%, 1); }
+.loginBox > a:active { background-color: hsla(218, 17%, 18%, 1); }
 
 
-.dot {
-  width: 4px;
-  height: 4px;
-  border-radius: 2px;
-  position: absolute;
-  background-color: white;
-}
+.skillBrowser > * { display: block; margin: 0 auto; height: calc(100vh - 15em); }
 
-.skillBrowser > * {
-  display: block;
-  margin: 0 auto;
-  height: calc(100vh - 15em);
-}
+@keyframes glow { 0% { fill: hsla(208, 11%, 28%, 1); } 50% { fill: hsla(44, 98%, 60%, 1); } 100% { fill: hsla(195, 29%, 95%, 1); } }
+.rebaseLogo { height: 40px; width: 40px; cursor: pointer; }
+.rebaseLogo text { font-weight: 600; fill: hsla(208, 11%, 28%, 1); }
+.rebaseLogo:hover text:nth-child(1) { animation: glow 600ms ease-in 0ms 1 normal forwards; }
+.rebaseLogo:hover text:nth-child(2) { animation: glow 600ms ease-in 100ms 1 normal forwards; }
+.rebaseLogo:hover text:nth-child(3) { animation: glow 600ms ease-in 200ms 1 normal forwards; }
+.rebaseLogo:hover text:nth-child(4) { animation: glow 600ms ease-in 300ms 1 normal forwards; }
+.rebaseLogo:hover text:nth-child(5) { animation: glow 600ms ease-in 400ms 1 normal forwards; }
+.rebaseLogo:hover text:nth-child(6) { animation: glow 600ms ease-in 500ms 1 normal forwards; }
 
-/* .languageSelector { */
-/*   width: 50%; */
-/*   float: left; */
-/*   display: flex; */
-/*   flex-direction: column; */
-/*   align-items: flex-end; */
-/*   justify-content: center; */
-/* } */
+.languageDisplay .headerValue { fill: hsla(44, 98%, 60%, 1); }
+.languageDisplay svg { position: relative; box-sizing: border-box; padding: 4em; height: 100%; width: 100%; }
+.languageDisplay line:not(.selector) { stroke: hsla(150, 6%, 93%, 1) }
+.languageDisplay line.selector { opacity: 1; stroke: transparent; }
+.languageDisplay text { fill: hsla(150, 6%, 93%, 0.2) }
+.languageDisplay text { cursor: default; font-weight: 600; }
+.languageDisplay g[data-selected=true] text { fill: hsla(44, 98%, 60%, 1); }
+.languageDisplay g line.ranking { stroke: hsla(195, 29%, 95%, 1); transition: stroke 150ms; }
+.languageDisplay g[data-selected=true] line.ranking { stroke: hsla(44, 98%, 60%, 1); }
+.languageDisplay .tweeter { fill: none; }
+.languageDisplay g[data-selected=true] .tweeter { fill: hsla(202, 96%, 49%, 1); cursor: pointer; }
+.languageDisplay line.population { stroke: hsla(208, 11%, 20%, 1); }
 
-.languageSelector .current {
-  position: absolute;
-  bottom: 1em;
-  left: 50%;
-  transform: translateX(-50%);
-  cursor: default;
-}
 
-.languageSelector .previous, .languageSelector .next {
-  position: absolute;
-  bottom: 50%;
-  font-size: 0.7em;
-  opacity: 0.25;
-  cursor: pointer;
-}
-
-.languageSelector .previous:hover, .languageSelector .next:hover {
-  opacity: 1;
-}
-
-.languageSelector .previous { left: 1em; }
-.languageSelector .next { right: 1em; }
-
-.languageDisplay {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.languageDisplay .headerValue {
-  fill: hsla(44, 98%, 60%, 1);
-}
-
-.languageDisplay svg {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.languageDisplay line:not(.selector) {
-  stroke: hsla(150, 6%, 93%, 1)
-}
-
-.languageDisplay text {
-  fill: hsla(150, 6%, 93%, 0.2)
-}
-
-.languageDisplay g[data-selected=true] line.ranking {
-  stroke: hsla(44, 98%, 60%, 1);
-}
-
-.languageDisplay g[data-selected=true] text {
-  fill: hsla(44, 98%, 60%, 1);
-}
-
-.languageDisplay .tweeter {
-  fill: none;
-}
-
-.languageDisplay text {
-  cursor: default;
-  font-weight: 600;
-}
-
-.languageDisplay g[data-selected=true] .tweeter {
-  fill: hsla(202, 96%, 49%, 1);
-  cursor: pointer;
-}
-
-.languageDisplay line.selector {
-  opacity: 1;
-  stroke: transparent;
-}
-
-.languageDisplay line.population {
-  opacity: 0.12;
-}
-
-.moduleDescription {
-  position: absolute;
-  top: 1em;
-  text-align: center;
-  display: block;
-  width: 60%;
-  height: 7.5em;
-}
-
-.moduleDescription > span {
-  display: block;
-}
-
-.languageSelection {
-  transition: 300ms opacity;
-  opacity: 0.25;
-}
-
-.languageSelection[data-selected=true], .languageSelection:hover {
-  opacity: 1.0;
-}
-
-.rotate-gear-one {
-  stroke: none;
-  fill: hsla(330, 3%, 85%, 1);
-  animation: rotate 9000ms linear infinite; transform-origin: 50% 50%;
-}
-.rotate-gear-two {
-  stroke: none;
-  fill: hsla(44, 98%, 60%, 1);
-  animation: rotate 6000ms linear infinite; animation-direction: reverse; transform-origin: 50% 50%;
-}
-.rotate-gear-three {
-  stroke: none;
-  fill: hsla(330, 3%, 85%, 1);
-  animation: rotate 4000ms linear infinite; transform-origin: 50% 50%;
-}
+@-webkit-keyframes rotate { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+.rotate-gear-one { stroke: none; fill: hsla(330, 3%, 85%, 1); animation: rotate 9000ms linear infinite; transform-origin: 50% 50%; }
+.rotate-gear-two { stroke: none; fill: hsla(44, 98%, 60%, 1); animation: rotate 6000ms linear infinite; animation-direction: reverse; transform-origin: 50% 50%; }
+.rotate-gear-three { stroke: none; fill: hsla(330, 3%, 85%, 1); animation: rotate 4000ms linear infinite; transform-origin: 50% 50%; }
 .rotate { animation: rotate 800ms linear infinite; transform-origin: 50% 50%; }
-@-webkit-keyframes rotate {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
